# Phase-Field-Fracture-Mechanics

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE.md  Makefile  README.md  cmake_install.cmake
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Doxyfile.in  Makefile  cmake_install.cmake  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/manual/: architecture.doctree  description.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/manual/: architecture.html  description.html
docs/docs/doxygen/html/: _c_make_lists_8txt.html  annotated.html  annotated_dup.js  array_8cpp.html  array_8cpp__incl.map  array_8hpp.html  array_8hpp__dep__incl.map  array_8hpp__dep__incl.md5  array_8hpp__incl.map  array_8hpp_source.html  array__inline_8hpp.html  array__inline_8hpp__dep__incl.map  array__inline_8hpp__dep__incl.md5  array__inline_8hpp__incl.md5  array__inline_8hpp_source.html  base__matrix_8hpp.html  base__matrix_8hpp.js  base__matrix_8hpp__dep__incl.map  base__matrix_8hpp__dep__incl.md5  base__matrix_8hpp__incl.map  base__matrix_8hpp_a2377b257fe83d3066141812bf253898a_cgraph.map  base__matrix_8hpp_a2377b257fe83d3066141812bf253898a_cgraph.md5  base__matrix_8hpp_source.html  class_array-members.html  class_array.html  class_array.js  class_array__coll__graph.map  class_array_ae9e652d84186e4ef0293a30c7c4af3df_icgraph.map  class_array_ae9e652d84186e4ef0293a30c7c4af3df_icgraph.md5  class_base_matrix-members.html  class_base_matrix.html  class_base_matrix.js  class_base_matrix__coll__graph.md5  class_base_matrix_a5e840b5b8195b01fea677c5d3a623ef2_icgraph.map  class_base_matrix_a5e840b5b8195b01fea677c5d3a623ef2_icgraph.md5  class_base_matrix_a8086b801b8415faea96f0bfe0a4ac8ed_icgraph.md5  class_base_matrix_ab89658706d0316fb693247bd5402b1d6_icgraph.md5  class_base_matrix_ac036dca55e151b93b40766afdebc1b14_icgraph.map  class_base_matrix_ac036dca55e151b93b40766afdebc1b14_icgraph.md5  class_base_matrix_ac3c957800f00d239ad2f78652e89f3d4_icgraph.map  (+137 more)
docs/docs/doxygen/xml/: _c_make_lists_8txt.xml  array_8cpp.xml  array_8hpp.xml  array__inline_8hpp.xml  base__matrix_8hpp.xml  class_array.xml  class_base_matrix.xml  class_disp_element.xml  class_element.xml  class_matrix.xml  class_model.xml  class_n_rsolver.xml  class_phase_element.xml  common_8hpp.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  (+15 more)
docs/manual/: Doxyfile  architecture.rst  description.rst  developer_guide.rst  getting_started.rst  joss.rst  user_guide.rst
docs/manual/html/: _c_make_lists_8txt.html  annotated.html  annotated_dup.js  array_8cpp.html  array_8cpp__incl.md5  array_8hpp.html  array_8hpp__incl.md5  array_8hpp_source.html  array__inline_8hpp.html  array__inline_8hpp__incl.map  array__inline_8hpp_source.html  base__matrix_8hpp.html  base__matrix_8hpp__dep__incl.map  base__matrix_8hpp__dep__incl.md5  base__matrix_8hpp__incl.md5  base__matrix_8hpp_source.html  class_array-members.html  class_array.html  class_array__coll__graph.md5  class_array_a26c21bf2b592207c71d6a0f952ef323c_cgraph.map  class_array_a26c21bf2b592207c71d6a0f952ef323c_cgraph.md5  class_array_ae9e652d84186e4ef0293a30c7c4af3df_cgraph.map  class_array_ae9e652d84186e4ef0293a30c7c4af3df_cgraph.md5  class_array_ae9e652d84186e4ef0293a30c7c4af3df_icgraph.map  class_array_ae9e652d84186e4ef0293a30c7c4af3df_icgraph.md5  class_base_matrix-members.html  class_base_matrix.html  class_base_matrix__coll__graph.map  class_base_matrix__inherit__graph.map  class_base_matrix__inherit__graph.md5  class_base_matrix_a5e840b5b8195b01fea677c5d3a623ef2_icgraph.map  class_base_matrix_a5e840b5b8195b01fea677c5d3a623ef2_icgraph.md5  class_base_matrix_a6f151cc78a826656e8b839499f08d53b_icgraph.map  class_base_matrix_a6f151cc78a826656e8b839499f08d53b_icgraph.md5  class_base_matrix_a8086b801b8415faea96f0bfe0a4ac8ed_icgraph.map  class_base_matrix_ab89658706d0316fb693247bd5402b1d6_icgraph.map  class_base_matrix_ac036dca55e151b93b40766afdebc1b14_icgraph.map  class_base_matrix_ac036dca55e151b93b40766afdebc1b14_icgraph.md5  class_base_matrix_ac3c957800f00d239ad2f78652e89f3d4_icgraph.md5  class_base_matrix_afbb3bec01cedf4ec17e94df3b910130c_icgraph.map  (+114 more)
docs/sphinx/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/sphinx/.doctrees/: environment.pickle  index.doctree
docs/sphinx/_sources/: index.rst.txt
docs/sphinx/manual/: architecture.html  description.html
examples/: CMakeLists.txt  Makefile  Test_classes.cpp  UseModel.cpp  basic_example.cpp  input_2_el.inp  input_3x3_crack_damage.inp  input_4_el.inp  input_file.inp  input_paper.inp  model_example.cpp  test
python/: CMakeLists.txt  LD_curve_square_domain.py  abaqus_results.csv  input_file.inp  mesh_parts.py  mesher.py  plotter.py  plotter_1element.py  plotter_Map.py  plotter_Map_animate.py  plotter_all_nodes.py  plotter_paper.py
src/: CMakeLists.txt  Makefile  Test_classes.cpp  arithmetic_operations.h  armadillo_solver.cpp  armadillo_solver.hpp  array.cpp  array.hpp  array_inline.hpp  base_matrix.hpp  cmake_install.cmake  common.hpp  dispelement.cpp  dispelement.hpp  element.cpp  element.hpp  lu_solver.cpp  lu_solver.hpp  matrix.cpp  matrix.hpp  matrix_inline.hpp  model.cpp  model.hpp  newton_raphson_solver.cpp  newton_raphson_solver.hpp  nonlinear_solver.hpp  phaseelement.cpp  phaseelement.hpp  test_tools.cpp  test_tools.hpp  vector.hpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Resisues_tests.cpp  cmake_install.cmake  full_run_test.cpp  input_2_el_tests.inp  input_4_el_tests.inp  input_4_el_tests_residues.inp  matrix_operations_test.cpp  model_applyBC_tests.cpp  model_assembly_tests  model_assembly_tests.cpp  model_assembly_tests_multiple_el.cpp  model_constructor_tests  model_constructor_tests.cpp  solver_tests.cpp
(+134 files in other folders)
